--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "dev": "cross-env NODE_ENV=development next dev -H 0.0.0.0 -p 3000",
-        "build": "next build",
-        "lint": "next lint"
+       "dev": "next dev",
+  "build": "next build",
+  "export": "next export",
+  "deploy": "npm run build && npm run export && gh-pages -d out"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.19.3",
-        "gh-pages": "^6.3.0",
         "next": "15.3.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -25,6 +23,7 @@
         "@types/react-dom": "^19",
         "autoprefixer": "^10.4.21",
         "cross-env": "^7.0.3",
+        "gh-pages": "^6.3.0",
         "postcss": "^8.5.5",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
