--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
        "dev": "next dev",
-  "build": "next build",
+  "build": "next build --no-lint",
   "export": "next export",
   "deploy": "npm run build && npm run export && gh-pages -d out"
     },
